Fixed layout issues

--- a/tools/color_management/css/styles.css
+++ b/tools/color_management/css/styles.css
@@ -7,7 +7,6 @@
     position: sticky;
     left: 0;
     top: 0;
-    display: inline-block;
     float: left;
 }
 
@@ -326,7 +325,6 @@ body {
  * 	Container
  */
 #container {
-	width: 2000px;
 
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
@@ -362,7 +360,7 @@ body {
  */
 
 #container-picker-samples {
-    display: inline-block;
+    float: left;
 }
 
 #picker-samples {
@@ -745,7 +743,6 @@ body {
  */
 
 #palette {
-	width: 500px;
 	padding: 10px 0;
 	background-image: url('../files/grain.png');
 	background-repeat: repeat;
@@ -758,22 +755,19 @@ body {
 }
 
 #color-palette {
-	width: 600px;
 	font-family: Arial, Helvetica, sans-serif;
 	color: #777;
 	float: left;
 }
 
-#color-palette .container {
+#color-palette .palette-container {
 	width: 100%;
 	height: 50px;
 	line-height: 50px;
-	overflow: hidden;
-	float: left;
 	transition: all 0.5s;
 }
 
-#color-palette .container > * {
+#color-palette .palette-container > * {
 	float: left;
 }
 
@@ -785,7 +779,7 @@ body {
 }
 
 #color-palette .palette {
-	width: 456px;
+	width: 200px;
 	height: 38px;
 	margin: 3px;
 	padding: 3px;
@@ -793,17 +787,17 @@ body {
 	background-color: #FFF;
 }
 
-#color-palette .palette .sample-color {
-	width: 30px;
+#color-palette .palette .palette-sample-color {
+	width: 20px;
 	height: 30px;
-	margin: 3px;
+	margin: 1px;
 	position: relative;
 	border: 1px solid #DDD;
 	float: left;
 	transition: all 0.2s;
 }
 
-#color-palette .palette .sample-color:hover {
+#color-palette .palette .palette-sample-color:hover {
 	cursor: pointer;
 	border-color: #BBB;
 	transform: scale(1.15);
@@ -844,4 +838,11 @@ body {
 #color-palette .controls .lock[locked-state='true']:hover {
 	/*background-image: url('images/lock-hover.png');*/
 	background-position: top right;
+}
+
+.notification-area {
+    position: sticky;
+    z-index: 100;
+    top: 0;
+    float: right;
 }
